layout and current color

--- a/src/components/about/about_style.css
+++ b/src/components/about/about_style.css
@@ -20,7 +20,7 @@
 .about_info_card {
     text-align: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background: #BCC9D1;
+    background: #edecff;
     padding: 8px;
     border-radius: 20px;
 }
