--- a/src/components/main/main_style.css
+++ b/src/components/main/main_style.css
@@ -15,7 +15,7 @@
     height: 300px;
     background-size: cover;
     animation: animationphoto 5s ease-in-out infinite;
-    border: 10px solid black;
+    border: 10px solid rgba(0, 0, 0, 0.8);
     background-position-y: -120px;
 }
 
