--- a/src/components/works/works_style.css
+++ b/src/components/works/works_style.css
@@ -11,7 +11,7 @@
 
 .choise_works {
     padding: 4px 8px;
-    background: #777F85;
+    background: #edecff;
     cursor: pointer;
     border-radius: 10px;
     border: 1px solid black;
@@ -20,32 +20,32 @@
 
 .choise_works:hover {
     color: #fffcf5;
-    background: #272A2B
+    background: #d2d0ff
 }
 
 .works_items {
     grid-template-columns: repeat(2, max-content);
-    gap: 3em;
+    gap: 5em;
     justify-content: center;
 }
 
 .work_img {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 300px;
     object-fit: cover;
     border-radius: 20px;
 }
 
 .work_item {
-    border: 3px solid black;
+    border: 3px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     padding: 10px;
-    background: #BCC9D1;
+    background: #edecff;
 }
 
 .active_choise {
     color: #fffcf5;
-    background: #272A2B
+    background: #d2d0ff
 }
 
 @media screen and (max-width: 992px) {
