--- a/src/contacts/contacts_style.css
+++ b/src/contacts/contacts_style.css
@@ -17,7 +17,7 @@
 
 .contacts_item {
     padding: 32px 32px;
-    background: #BCC9D1;
+    background: #edecff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     text-align: center;
@@ -40,7 +40,7 @@
     width: 100%;
     height: 100%;
     border: 2px solid rgba(0, 0, 0, 0.3);
-    background: #BCC9D1;
+    background: #edecff;
     border-radius: 20px;
     padding: 18px;
     z-index: 1;
@@ -52,10 +52,9 @@
     top: -16px;
     left: 30px;
     padding: 10px;
-    background: white;
     z-index: 10;
     font-size: 12px;
-    background: #BCC9D1;
+    background: #edecff;
     border-radius: 50%;
     cursor: default;
 }
@@ -73,17 +72,21 @@
 }
 
 .button_contacts {
-    background: #777F85;
+    background: #edecff;
     color: white;
     border-radius: 20px;
     padding: 8px 16px;
     transition: 0.3s;
     color: black;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 99;
+    top: 130px;
 }
 
 .button_contacts:hover {
-    color: #fffcf5;
-    background: #272A2B;
+    color: black;
+    background: #d2d0ff;
     transform: scale(1.1) translateY(-5px);
 }
 
